<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="customisation_title">Customisation</string>
    <string name="add">Add</string>
    <string name="advanced">Advanced</string>
    <string name="cancel">Cancel</string>
    <string name="choose_app">Choose app</string>
    <string name="general_category">General</string>
    <string name="gestures_category">Gestures</string>
    <string name="music_category">Music</string>
    <string name="security_category">Security</string>
    <string name="hardware_category">Hardware</string>
    <string name="icons_category">Icons</string>
    <string name="aosp_recents_category">AOSP recents</string>
    <string name="light_category">Lights</string>
    <string name="dlg_ok">OK</string>
    <string name="attention">Attention</string>
    <string name="loading">Loading\u2026</string>
    <string name="reset">Reset</string>
    <string name="reset_colors">Reset colors</string>
    <string name="reset_android">Android</string>
    <string name="text_title">Text</string>
    <string name="icon_title">Icon</string>
    <string name="color_title">Color</string>
    <string name="colors_title">Colors</string>
    <string name="recents_category">Recents</string>
    <string name="recents_category_summary">Customize your recents overview</string>
    <string name="status_bar_category">Statusbar</string>
    <string name="status_bar_category_summary">Customize your statusbar</string>
    <string name="notifications_panel_category">Notifications panel</string>
    <string name="notifications_panel_category_summary">Customize your QS panel and notifications</string>
    <string name="system_category">System</string>
    <string name="system_category_summary">Various system extensions</string>
    <string name="lockscreen_category">Lockscreen</string>
    <string name="lockscreen_category_summary">Customize your lockscreen</string>
    <string name="navigation_category">Navigation</string>
    <string name="navigation_category_summary">Customize your navigation bar</string>
    <string name="build_tweaks_summary_title">You can customise your device here</string>
    <string name="system_animations">System Animations</string>
    <string name="listview">ListView</string>
    <string name="general_tweaks_title">General Tweaks</string>
    <string name="traffic_title">Traffic indicators</string>
    <string name="carrierlabel_title">Carrier Label</string>
    <string name="misc_extensions_title">Misc extensions</string>
    <string name="recents_ui_title">Recents UI</string>
    <string name="lockscreen_ui_title">Lockscreen UI</string>
    <string name="lockscreen_shortcuts">Lockscreen shortcuts</string>
    <string name="lockscreen_tuner_title">Lockscreen tuner</string>
    <string name="statusbar_items_category">Statusbar items</string>
    <string name="notifications_title">Notifications</string>
    <string name="smart_pixels_warning_text">Smart pixels is a power saving feature. Depending on how many pixels you decide to turn off, you could see a significant improvement in battery life. For a good user experience, we recommend you set the amount of disabled pixels at 75 percent.</string>
    <string name="navigationbar_settings_title">Navigation bar</string>
    <string name="quick_settings_title">Quick Settings</string>
    <string name="buttons_title">Buttons</string>
    <string name="app_ops_category">App Ops</string>
    <string name="extensions_dialog_title">Help us help you!</string>
    <string name="extensions_dialog_message">If you find a bug with any of these settings, post in the Bug Reports section of our Google+ page. You MUST include the following when posting a bug report:\n\n1. A logcat or last_kmsg\n2. Kernel and mods used\n3. Useful information\n\nIf you fail to report something adequately, DO NOT expect things to be fixed.</string>
    <string name="extensions_dialog_toast">READ THE WHOLE THING!</string>
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on color below to apply</string>
    <string name="arrow_right">→</string>
    <string name="arrow_down">↓</string>
    <string name="hex">Hex:</string>
    <string name="hex_hint">#ff000000</string>
    <string name="set">Set</string>
    <string name="color_default">Default</string>
    <string name="power_menu_title">Power menu</string>
    <string name="power_menu_title_summary">View or change power menu entries</string>
    <string name="powermenu_screenshot">Screenshot</string>
    <string name="powermenu_torch">Flashlight</string>
    <string name="powermenu_power">Power</string>
    <string name="powermenu_restart">Restart</string>
    <string name="powermenu_restart_recovery">Advanced restart</string>
    <string name="powermenu_airplane">Airplane</string>
    <string name="powermenu_settings">Settings</string>
    <string name="powermenu_lockdown">Lock Down</string>
    <string name="powermenu_soundpanel">Sound Panel</string>
    <string name="powermenu_users">Users</string>
    <string name="powermenu_logout">Logout</string>
    <string name="navbar_tuner_title">Navbar tuner</string>
    <string name="double_tap_to_sleep_lockscreen_title">Double-tap on lockscreen to sleep</string>
    <string name="double_tap_to_sleep_lockscreen_summary">Double tap on the top third or bottom shortcut area of the lock screen to put the device to sleep</string>
    <string name="double_tap_to_sleep_title">Status bar</string>
    <string name="double_tap_to_sleep_summary">Double-tap status bar to put the device to sleep</string>
    <string name="network_traffic_title">Network traffic</string>
    <string name="network_traffic_type">Select net activity type</string>
    <string name="show_network_traffic_up">Uplink</string>
    <string name="show_network_traffic_down">Downlink</string>
    <string name="show_network_traffic_all">Uplink and Downlink</string>
    <string name="network_traffic_state_title">Show net activity in statusbar</string>
    <string name="network_traffic_autohide_threshold_title">Net activity autohide threshold (KB/s)</string>
    <string name="navbar_toggle_title">Allow navigation bar</string>
    <string name="navbar_toggle_summary">Enable or disable navigation bar</string>
    <string name="headsup_category">HeadsUp Settings</string>
    <string name="heads_up_notifications">Heads up</string>
    <string name="summary_heads_up_enabled">Pop-up notifications are enabled</string>
    <string name="summary_heads_up_disabled">Pop-up notifications are disabled</string>
    <string name="add_heads_up_package">Add app</string>
    <string name="add_heads_up_stoplist_summary">Disable heads up notifications in these applications</string>
    <string name="add_heads_up_blacklist_summary">Disable heads up from these applications</string>
    <string name="heads_up_stoplist_title">Stoplist</string>
    <string name="heads_up_blacklist_title">Blacklist</string>
    <string name="profile_choose_app">Choose app</string>
    <string name="dialog_delete_title">Delete</string>
    <string name="dialog_delete_message">Remove selected item?</string>
    <string name="heads_up_time_out_title">Time out</string>
    <string name="heads_up_time_out_summary">Peeking notifications will show for <xliff:g id="number">%d</xliff:g> seconds</string>
    <string name="heads_up_time_out_2sec">2 seconds</string>
    <string name="heads_up_time_out_4sec">4 seconds</string>
    <string name="heads_up_time_out_5sec">5 seconds</string>
    <string name="heads_up_time_out_6sec">6 seconds</string>
    <string name="heads_up_time_out_8sec">8 seconds</string>
    <string name="heads_up_time_out_10sec">10 seconds</string>
    <string name="heads_up_snooze_title">Snooze timer</string>
    <string name="heads_up_snooze_summary_one_minute">Swiping up on peeking notifications will snooze heads up from that application for 1 minute</string>
    <string name="heads_up_snooze_summary">Swiping up on peeking notifications will snooze heads up from that application for <xliff:g id="number">%d</xliff:g> minutes</string>
    <string name="heads_up_snooze_disabled_summary">Snooze timer is disabled</string>
    <string name="heads_up_snooze_1min">1 minute</string>
    <string name="heads_up_snooze_5min">5 minutes</string>
    <string name="heads_up_snooze_10min">10 minutes</string>
    <string name="heads_up_snooze_15min">15 minutes</string>
    <string name="heads_up_snooze_20min">20 minutes</string>
    <string name="face_auto_unlock_title">Face auto unlock</string>
    <string name="face_auto_unlock_summary">Dismiss lockscreen after face unlocking</string>
    <string name="action_value_default_action" translatable="false">default</string>
    <string name="action_value_select_app" translatable="false">app</string>
    <string name="action_value_custom_action" translatable="false">custom</string>
    <string name="action_value_back" translatable="false">task_back</string>
    <string name="action_value_home" translatable="false">task_home</string>
    <string name="action_value_search_assist" translatable="false">task_assist</string>
    <string name="action_value_recent_apps" translatable="false">task_recents</string>
    <string name="action_value_voice_search" translatable="false">task_voice_search</string>
    <string name="action_value_menu" translatable="false">task_menu</string>
    <string name="picker_activities">Activities</string>
    <string name="select_custom_app_title">Select custom app</string>
    <string name="select_custom_activity_title">Select custom activity</string>
    <string name="profile_applist_title">Applications</string>
    <string name="choose_action_title">Choose action</string>
    <string name="action_entry_default_action">Default settings</string>
    <string name="action_entry_select_app">Select application</string>
    <string name="action_entry_custom_action">Select custom action</string>
    <string name="hardware_keys_volume_keys_title">Volume rocker</string>
    <string name="hardware_keys_home_key_title">Home button</string>
    <string name="hardware_keys_menu_key_title">Menu button</string>
    <string name="hardware_keys_assist_key_title">Search button</string>
    <string name="hardware_keys_appswitch_key_title">Overview button</string>
    <string name="hardware_keys_back_key_title">Back button</string>
    <string name="hardware_keys_double_tap_summary">Set double tap action</string>
    <string name="hardware_keys_single_tap_summary">Set single tap action</string>
    <string name="hardware_keys_long_press_summary">Set long press action</string>
    <string name="hardware_keys_single_tap_title">Single tap action</string>
    <string name="hardware_keys_long_press_title">Long press action</string>
    <string name="hardware_keys_double_tap_title">Double tap action</string>
    <string name="hardware_keys_category">Hardware navigation buttons</string>
    <string name="hardware_keys_disable_title">Disable hardware buttons</string>
    <string name="button_backlight_options_category">Backlight options</string>
    <string name="button_backlight_enable_title">Allow button backlight</string>
    <string name="button_link_brightness">Link to screen brightness</string>
    <string name="button_link_brightness_summary">Button backlight brightness will adjust based on current screen brightness level</string>
    <string name="button_manual_brightness">Brightness level</string>
    <string name="button_timeout_title">Backlight timeout</string>
    <string name="button_backlight_on_touch_only_title">Button backlight touch</string>
    <string name="block_on_secure_keyguard_title">Disable quick settings</string>
    <string name="block_on_secure_keyguard_summary">Disables quick settings in secure lock screen</string>
    <string name="weather_title">Weather</string>
    <string name="weather_unit">Temperature unit</string>
</resources>